--- a/ansible/templates/xinitrc.j2
+++ b/ansible/templates/xinitrc.j2
@@ -12,4 +12,4 @@ while true; do
   sleep 2
 done
 
-chromium-browser --no-sandbox --hide-scrollbars --disable-gpu --noerrdialogs --disable-infobars --kiosk "{{ kiosk_url }}"
+chromium-browser --no-sandbox --hide-scrollbars --noerrdialogs --disable-infobars --kiosk "{{ kiosk_url }}"
