feat: update xinitrc to include dunst for notifications and adjust bashrc tasks

--- a/ansible/roles/kiosk/templates/xinitrc.j2
+++ b/ansible/roles/kiosk/templates/xinitrc.j2
@@ -1,9 +1,17 @@
 #!/bin/sh
 # X11 kiosk mode initialization script
+
+# Set DISPLAY environment variable to use the primary X server display (:0)
+export DISPLAY=:0
+xhost +local:
+
+# Disable screen saver and power management
 xset s off
 xset -dpms
 xset s noblank
 unclutter -idle 0.1 -root &
+# dunst daemon for d-bus notifications from docker container 
+dunst &
 openbox-session &
 
 while true; do
