fix: update Dockerfile comment and modify admin image tag in docker-compose

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -86,7 +86,7 @@ services:
            - zemfyre-net
 
     admin:
-        image: iotistic/zemfyre-admin:latest
+        image: iotistic/zemfyre-admin:${DOCKER_TAG}-${DEVICE_TYPE}
         build:
             context: ./admin
             dockerfile: Dockerfile
