fix: comment out build section for admin service in docker-compose

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -87,9 +87,9 @@ services:
 
     admin:
         image: iotistic/zemfyre-admin:${DOCKER_TAG}-${DEVICE_TYPE}
-        build:
-            context: ./admin
-            dockerfile: Dockerfile
+        # build:
+        #   context: ./admin
+        #   dockerfile: Dockerfile
         container_name: admin
         restart: always
         ports:
