--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -1,5 +1,6 @@
 services:
     application-manager:
+        image: iotistic/application-manager:${DOCKER_TAG}-${DEVICE_TYPE}
         build:
             context: ./application-manager
             dockerfile: Dockerfile
