refactor: Add container_name definition for application-manager in docker-compose files

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -1,5 +1,6 @@
 services:
     application-manager:
+        container_name: application-manager
         image: iotistic/application-manager:${DOCKER_TAG}-${DEVICE_TYPE}
         build:
             context: ./application-manager
