--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -16,6 +16,7 @@ services:
           - USE_REAL_DOCKER=true
           - NODE_ENV=production
           - DATABASE_PATH=/app/data/database.sqlite
+          - MQTT_BROKER=mqtt://mosquitto:1883
 
     nginx:
         image: nginx
