--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -6,6 +6,7 @@ services:
             context: ./application-manager
             dockerfile: Dockerfile
         privileged: true
+        pid: "host"
         tty: true
         restart: always
         network_mode: host
