fix: Update device-agent configuration in docker-compose for correct container name and build context

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -1,9 +1,9 @@
 services:
     device-agent:
-        container_name: device-agent
-        image: iotistic/device-agent:${DOCKER_TAG}-${DEVICE_TYPE}
+        container_name: agent
+        image: iotistic/agent:${DOCKER_TAG}-${DEVICE_TYPE}
         build:
-            context: ./device-agent
+            context: ./agent
             dockerfile: Dockerfile
         privileged: true
         pid: "host"
