refactor: Replace ci-test.sh with device-api.sh for improved API testing and update docker-compose configurations

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -20,6 +20,7 @@ services:
           - MQTT_BROKER=mqtt://mosquitto:1883
           - ENABLE_FILE_LOGGING=false
           - MAX_LOGS=500
+          - CLOUD_API_ENDPOINT=http://localhost:3002
 
     nginx:
         image: nginx
