fix: Update device API port in environment configurations and adjust start script

--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -21,6 +21,7 @@ services:
           - ENABLE_FILE_LOGGING=false
           - MAX_LOGS=500
           - CLOUD_API_ENDPOINT=http://localhost:3002
+          - DEVICE_API_PORT=48484
 
     nginx:
         image: nginx
