--- a/docker-compose.yml.tmpl
+++ b/docker-compose.yml.tmpl
@@ -136,7 +136,7 @@ services:
             - DBUS_SESSION_BUS_ADDRESS=${DBUS_SESSION_BUS_ADDRESS}
         volumes:
           - /tmp/.X11-unix:/tmp/.X11-unix  # for X11
-          - /run/user/1000/bus:/run/user/1000/bus  # for D-Bus socketdy
+          - /run/user/1000/bus:/run/user/1000/bus  # for D-Bus socketdy0
           - /var/run/docker.sock:/var/run/docker.sock
         user: "1000:1000"
         ports:
